--- a/Styles/default.css
+++ b/Styles/default.css
@@ -1,3 +1,6 @@
+#bgwidget{
+  background-image: url(:/images/bg1.png);
+}
 QTextEdit,QListWidget
 {
      color: rgb(0, 0, 0);
@@ -5,7 +8,7 @@ QTextEdit,QListWidget
      background-attachment: fixed;
      background-position: center center;
      background-repeat: none;  
-	 background-image:url(:/images/bg.png); 
+     background-image:url(:/images/bg.png); 
 }
 
 QTreeView,QGroupBox,QTableWidget,QListView,QListWidget
